# simplay-public-mirror

./: Cargo.toml  shell.nix  todo.tdl
ARCHIVE/simplay-old/: Cargo.toml  LICENSE  README.md  run-linux  todo.tdl
ARCHIVE/simplay-old/src/: chunk.rs  chunk_manager.rs  library.rs  main.rs  perlin.rs  voxel.rs  world.rs
assets/models/entity/: player.bbmodel
assets/music/: bliss.json  dreamy.json
assets/textures/block/: amethyst.xcf  bedrock.xcf  carnelian.xcf  coal.xcf  coal_ore.xcf  cut_obsidian.xcf  cut_quartz.xcf  daisy.xcf  debug.xcf  diamond.xcf  dirt.xcf  emerald.xcf  glass.xcf  gold.xcf  grass_side.xcf  grass_top.xcf  jade.xcf  oak_leaves.xcf  oak_log_end.xcf  oak_log_side.xcf  oak_planks.xcf  obsidian.xcf  raw_oak_log_end.xcf  raw_oak_log_side.xcf  raw_spruce_log_end.xcf  raw_spruce_log_side.xcf  ruby.xcf  sapphire.xcf  secret.xcf  short_grass_blades.xcf  spruce_leaves.xcf  spruce_log_end.xcf  spruce_log_side.xcf  spruce_planks.xcf  stone.xcf  tanzanite.xcf  tourmaline.xcf
assets/textures/block/complex/: chest.xcf
assets/textures/block/overlay/: breaking.xcf
assets/textures/entity/: default_player.xcf
assets/textures/item/: stick.xcf  stone_dagger.xcf  stone_pickaxe.xcf  stone_sword.xcf
assets/textures/misc/: item_package.xcf
src/: asset_manager.rs  block.rs  chunk.rs  chunk_manager.rs  cli.rs  dir.rs  editor_mode.rs  filesystem.rs  hash.rs  hash_boilerplate.rs  library.rs  log.rs  main.rs  mesher.rs  noise.rs  perlin.rs  places.rs  random.rs  server.rs  voxel.rs  world.rs  world_generation.rs
src/asset_packer/: mod.rs  packer.rs
(+7 files in other folders)
