[package]
name = "simplay"
version = "0.0.1"
edition = "2021"

[features]
bdl = ["bevy/dynamic_linking"]

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.2"
bracket-noise = "0.8.7"
hashbrown = "0.14.0"
rand = "0.8.5"
rayon = "1.7.0"
