[package]
name = "simplay"
version = "0.0.1"
edition = "2021"

[features]
bdl = ["bevy/dynamic_linking"]

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.3"
bevy-inspector-egui = "0.20.0"
bevy_editor_pls = "0.5.0"
bracket-noise = "0.8.7"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
fs_extra = "1.3.0"
hashbrown = "0.14.0"
image = "0.24.7"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.188", features = ["derive"] }
sha256 = "1.4.0"
toml = "0.8.2"
walkdir = "2.4.0"
zip = "0.6.6"
zip-extract = "0.1.2"
